<resources>
    <string name="app_name">AlarmPi</string>
    <string name="action_settings">Settings</string>
    <string name="on">An</string>
    <string name="off">Aus</string>
    <string name="labelLight1">Licht 1</string>
    <string name="labelLight2">Licht 2</string>
    <string name="title_activity_select">AlarmPi auswählen</string>
    <string name="action_select">AlarmPi auswählen</string>
    <string name="title_activity_add">AlarmPi hinzufügen</string>
    <string name="labelAddName">Name</string>
    <string name="labelAddHostname">Hostname</string>
    <string name="labelConnected">verbunden mit:</string>
    <string name="labelDisconnected">Nicht Verbunden</string>
    <string name="labelSound">Sound</string>
    <string name="stringWeekdayMonday">Montag</string>
    <string name="stringWeekdayTuesday">Dienstag</string>
    <string name="stringWeekdayWednesday">Mittwoch</string>
    <string name="stringWeekdayThursday">Donnerstag</string>
    <string name="stringWeekdayFriday">Freitag</string>
    <string name="stringWeekdaySaturday">Samstag</string>
    <string name="stringWeekdaySunday">Sonntag</string>
    <string name="oneTime">Einmalig</string>
    <string name="labelAlarmOneTime">Einmalig</string>
    <string name="stringErrorConnect">Verbindung zu AlarmPi nicht möglich</string>
    <string name="stringConnectionSuccess">Verbindung zu AlarmPi erfolgreich</string>
    <string name="stringConnectionError">Verbindung zu AlarmPi nicht möglich</string>
    <string name="stringUpdateSuccess">Alarm update erfolgreich</string>
    <string name="stringUpdateError">Alarm Update Fehler</string>
    <string name="labelTimer">Timer</string>

</resources>
