<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="hagego.alarmpi.MainActivity"
    tools:showIn="@layout/activity_main">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/labelDisconnected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewConnection"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:singleLine="true"
                android:layout_marginEnd="4dp" />

            <TextView
                android:text="TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewAlarmPiName"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/labelLight1"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingEnd="10dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:text="@string/off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioLight1Off"
                    android:layout_weight="0" />

                <RadioButton
                    android:text="@string/on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioLight1On"
                    android:layout_weight="0" />

            </RadioGroup>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/seekBarLight1" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/labelLight2"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingEnd="10dp" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <RadioButton
                    android:text="@string/off"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioLight2Off"
                    android:layout_weight="0" />

                <RadioButton
                    android:text="@string/on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radioLight2On"
                    android:layout_weight="0" />

            </RadioGroup>
            <SeekBar
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:id="@+id/seekBarLight2" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/labelSound"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:paddingEnd="13dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:text="@string/off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioSoundOff"
                        android:layout_weight="0" />

                    <RadioButton
                        android:text="@string/on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioSoundOn"
                        android:layout_weight="0" />

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:id="@+id/seekBarSound" />
                </RadioGroup>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerSoundList"
                    android:layout_weight="0" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
